Pug updates index/layout

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
+    title Books
+    link(rel='stylesheet', href='/static/stylesheets/style.css')
   body
-    header
-     div
      block content
