--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1 Books
   p
-    a.button(href='new_book.html') Create New Book
+    a.button(href='books/new') Create New Book
   table
     thead
       tr
