--- a/views/index.pug
+++ b/views/index.pug
@@ -1,22 +1,26 @@
 extends layout
 
 block content
-  h1 Books
-  p
-    a.button(href='books/new') Create New Book
-  table
-    thead
-      tr
-        th Title
-        th Author
-        th Genre
-        th Year
-    tbody
-      each Book in books
-        Book
-          tr
-            td 
-              a(href='book_detail.html')= Book.title
-            td= Book.author
-            td= Book.genre
-            td= Book.year
+  head
+    title Books
+    link(rel='stylesheet', href='/static/stylesheets/style.css')
+  body
+    h1 Books
+    p
+      a.button(href='books/new') Create New Book
+    table
+      thead
+        tr
+          th Title
+          th Author
+          th Genre
+          th Year
+      tbody
+        each Book in books
+          Book
+            tr
+              td 
+                a(href='book_detail.html')= Book.title
+              td= Book.author
+              td= Book.genre
+              td= Book.year
