--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -6,20 +6,20 @@ block content
         link(rel='stylesheet', href='/static/stylesheets/style.css')
     body
         h1 New Book
-        form(action='/books' method='post')
-        p
-            label(for='title') Title
-            input#title(name='title' type='text')
-        p
-            label(for='author') Author
-            input#author(name='author' type='text')
-        p
-            label(for='genre') Genre
-            input#genre(name='genre' type='text')
-        p
-            label(for='year') Year
-            input#year(name='year' type='text')
-        p
-            input(type='submit' value='Create New Book')
-        p
-            a.button(href='/books') Cancel
+        form(action='/books', method='post')
+            p
+                label(for='title') Title
+                input#title(type='text', name='title')
+            p
+                label(for='author') Author
+                input#author(type='text', name='author')
+            p
+                label(for='genre') Genre
+                input#genre(type='text', name='genre')
+            p
+                label(for='year') Year
+                input#year(type='text', name='year')
+            p
+                input(type='submit', value='Create New Book')
+            p
+                a.button(href='/books') Cancel
