--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -6,7 +6,8 @@ block content
         title= book.title
         link(rel='stylesheet', href='/static/stylesheets/style.css')
     h1 Update Book
-    form
+
+    form(action="/books/" + book.id + "/update", method="post")
         p
             label(for='title') Title
             input#title(name='title' type='text' value= book.title)
@@ -21,7 +22,7 @@ block content
             input#year(name='year' type='text' value= book.year)
         p
             input(type='submit' value='Update Book')
-    form(method='post' action='/books/8/delete' onsubmit="return confirm('Do you really want to delete this book?');")
+    form(action="/books/" + book.id + "/delete", method="post" onsubmit="return confirm('Do you really want to delete this book?');")
         p
             a.button(href='/books') Cancel
         p
