--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -4,8 +4,8 @@ block content
     head
         title New Book
         link(rel='stylesheet', href='/static/stylesheets/style.css')
-    body
-        h1 New Book
+    body.newbook
+        h1 Add a new book to our library!
 
         include validate-error
 
