--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -5,6 +5,7 @@ block content
     head
         title= book.title
         link(rel='stylesheet', href='/static/stylesheets/style.css')
+    body.updatebook    
     h1 Update Book
 
     include validate-error
