--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,13 @@ block content
     h1.title Aaron and Company
     p
       a.button(href='books/new') Create New Book
+
+      form(action='/books/search/' method="get")
+         p
+            label(for='search', class='search')
+              input#search(placeholder='Search...' name='search')
+            input(type='submit' value='search')
+     
     table
       thead
         tr.column
