--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content
   head
-    title Page Not Found
+    title 404 Page Not Found
     link(rel='stylesheet', href='/static/stylesheets/style.css')
   body.error
     nav.nav
